# zephyr_practice

./: README.md
button/: CMakeLists.txt  README.md  prj.conf
button/inc/: button.h  encoder.h  led.h  main.h
button/src/: button.c  encoder.c  led.c  main.c
